GStreamer: Fix black preview window on capturesessions

Properly render the video frames we receive in capture sessions. The
pipeline for capturing should never be in a stopped state and not
deliver any video frames.

As a drive-by, convert some commented out debug output to use proper
logging.

Fixes: QTBUG-97911
Pick-to: 6.2
Change-Id: Ie318925fa6bb9ef705b3d996f878da0bda8bf315
Reviewed-by: Piotr Srebrny <piotr.srebrny@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>